2018-10-30  Ben Elliston  <bje@gnu.org>

	* configure.ac (AC_CONFIG_SUBDIRS): Remove.
	* configure: Regenerate.

2018-10-29  Ben Elliston  <bje@gnu.org>

	* README (Documentation): Update.

2018-10-28  Jacob Bachmeyer  <jcb62281@gmail.com>

	* lib/framework.exp (record_test): Really fix message formatting.

2018-10-29  Ben Elliston  <bje@gnu.org>

	Reported by Jacob Bachmeyer.
	* testsuite/runtest.all/utils.test: Fix missing end quote.

2018-10-28  Jacob Bachmeyer  <jcb62281@gmail.com>

	* lib/framework.exp (record_test): Fix message formatting.

2018-07-20  Ben Elliston  <bje@gnu.org>

	* contrib/mysql/make-datafile.sh: Eliminate Shellcheck warnings.
	* contrib/mysql/sum2xml.sh: Likewise.

2018-07-20  Ben Elliston  <bje@gnu.org>

	* contrib/compare_tests: Eliminate Shellcheck warnings.
	* contrib/mysql/sum2xml.sh: Likewise.

2018-07-20  Ben Elliston  <bje@gnu.org>

	* compile, depcomp, install-sh: Latest upstream versions.

2018-07-20  Ben Elliston  <bje@gnu.org>

	* contrib/sum2junit.sh: Eliminate some Shellcheck warnings.

2018-07-19  Ben Elliston  <bje@gnu.org>

	* runtest: Use POSIX 'command', not 'type', to look for the Expect
	binary. Silences Shellcheck warning SC2039 ("In POSIX sh, 'type'
	is undefined").

2018-07-19  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to latest version.
	* config.sub: Likewise.

2018-07-06  Richard Biener  <rguenther@suse.de>

	* lib/remote.exp (close_wait_program): Use separate kill command
	for each pid.

2017-10-16  Ben Elliston  <bje@gnu.org>

	* NEWS: Start a new section for the next release.
	* configure.ac (AC_INIT): Update version number.
	* configure: Regenerate.
	* runtest.exp (frame_version): Update version number.
	* doc/dejagnu.texi: Likewise.
	* doc/runtest.1: Update datestamp.

2017-10-16  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2017-09-26.
	* config.sub: Likewise.

2017-09-13  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (open_logs): Set XML version to 1.1.